--- a/index.html/healthcare-appointment-system_index.html
+++ b/index.html/healthcare-appointment-system_index.html
@@ -16,7 +16,7 @@
       <label for="patientName">Full Name</label>
       <input type="text" id="patientName" placeholder="e.g. Ashley Bane" required>
       <label for="patientEmail">Email</label>
-      <input type="email" id="patientEmail" placeholder="e.g. Jasmine@email.c      A modern web app for booking and viewing clinic appointments. Built with HTML, CSS, and JavaScript.om" required>
+      <input type="email" id="patientEmail" placeholder="e.g. Jasmine@email.com" required>
       <label for="doctor">Doctor</label>
       <div style="display: flex; gap: 18px; margin-bottom: 8px;">
         <label style="display: flex; align-items: center; cursor: pointer; gap: 8px;">
