--- a/healthcare-appointment-system_index.html
+++ b/healthcare-appointment-system_index.html
@@ -36,6 +36,7 @@
       <input type="date" id="appointmentDate" required>
       <button type="submit">Book Appointment</button>
     </form>
+    <button id="clearBtn" type="button">Clear Display</button>
     <div id="appointments"></div>
   </div>
   <script src="script.js"></script>
